# gcf-proxy

./: .gitignore  CHANGELOG.md  DISTRIBUTION.md  GUIDE.md  README.md  ROADMAP.md  backend_http.go  frontend_http.go  gcf-proxy  go.mod  go.sum  jsonrpc.go  main.go  proxy_test.go  rewriter.go  server.json  stats.go  test.sh  test_session_e2e.py
.github/workflows/: download-stats.yml  release.yml
assets/: downloads-badge.cache  downloads-badge.json
npm/gcf-proxy/: README.md  package.json
npm/gcf-proxy-darwin-arm64/: package.json
npm/gcf-proxy-darwin-x64/: package.json
npm/gcf-proxy-linux-arm64/: package.json
npm/gcf-proxy-linux-x64/: package.json
npm/gcf-proxy-win32-arm64/: package.json
npm/gcf-proxy-win32-x64/: package.json
pypi/: README.md  pyproject.toml
pypi/gcf_proxy/: __init__.py  __main__.py
scripts/: download-stats.sh  npm-publish.sh  pypi-build-wheels.sh
testdata/: mock_server.go
